# anonymousKS

./: CLAUDE.md  DesativarTecladoPS2.bat  ListarTecladosAtivos.bat  README.md  TogglarTecladoNotebook.bat  criar_pastas.bat  inventario.bas  server.js  styles.css
.claude/: MEMORY.md  settings.json
.claude/brain/: Aderencia ODI.md  Veredito ODI.md
.claude/hooks/: session_start.sh  token_guard.py
.github/workflows/: pages.yml
docs/: index.html
football_arb/: README.md  pyproject.toml  sample_odds.csv
football_arb/football_arb/: __init__.py  cli.py  detector.py  math_core.py  models.py  output.py  stake.py  webapp.py
football_arb/football_arb/providers/: __init__.py  api.py  base.py  csv_provider.py  mock.py
football_arb/tests/: test_math_core.py
health-platform/engine/: dietGenerator.js  formulas.js  test.js  workoutGenerator.js
health-platform/web/: index.html
moneyprinterv2/web/: server.py
omega/: index.html  persona.md  prompt-assistente.md
omega/web/: index.html
pinescript/: README.md  Simulador_Standalone.html  app.js  build_standalone.js  index.html  styles.css
public/: index.html
roleta-stats/: README.md  index.html
trafegoai/: .env.example  DEPLOY.md  DEPLOY_RAILWAY.md  DEPLOY_SEM_BACKEND.md  README.md  render.yaml
vba/: ASBUILTENERGE.bas  ASBUILTENERGE_DOC.md  AUDITOR_ANEEL_COMPLETO.bas  AUDITOR_ANEEL_COMPLETO_TESTES.md  AnaliseCKCP_OTIMIZADO.bas  AnaliseCKCP_OTIMIZADO_DOC.md  ExportTextos0004.bas  inventario.bas  inventario_DOC.md  inventario_ESTAVEL.bas
web/: build-standalone.js  index.html  inventario-standalone.html
(+118 files in other folders)
