[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "football_arb"
version = "0.1.0"
description = "Detector/analisador de arbitragem para futebol (NÃO executa apostas)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
football-arb = "football_arb.cli:main"

[tool.setuptools.packages.find]
include = ["football_arb*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
